<resources>
    <string name="app_name">Final Project Star Wars</string>
        <string name="compare">Compare</string>
        <string name="loading_error_message">Woops.  We couldn\'t complete your search.  Check your internet connection and try again.</string>
        <string name="action_share">Share repo</string>
        <string name="action_view_repo">View this repo on GitHub</string>
        <string name="share_chooser_title">Pick an app to share this repo</string>
        <string name="action_settings">Settings</string>
        <string name="saved_search_results">Saved Search Results</string>

        <string name="search">Search</string>
        <string name="saved_results">Saved Search Results</string>

        <string name="drawer_open">Open drawer</string>
        <string name="drawer_close">Close drawer</string>

        <!-- - - - - - - - - - - - - - - - -
             - Used for sort preference -
             - - - - - - - - - - - - - - - - -->
        <string name="pref_sort_key" translatable="false">pref_sort</string>
        <string name="pref_sort_title">Sort by</string>
        <string name="pref_sort_match">Best match</string>
        <string name="pref_sort_match_value" translatable="false"></string>
        <string name="pref_sort_stars">Stars</string>
        <string name="pref_sort_stars_value" translatable="false">stars</string>
        <string name="pref_sort_forks">Forks</string>
        <string name="pref_sort_forks_value" translatable="false">forks</string>
        <string name="pref_sort_updated">Most-recently updated</string>
        <string name="pref_sort_updated_value" translatable="false">updated</string>
        <string name="pref_sort_default">@string/pref_sort_stars_value</string>


        <string name="pref_search_key" translatable="false">pref_search</string>
        <string name="pref_search_title">Second Search Entry</string>

        <string name="pref_swapi_title">Search By</string>
        <string name="pref_swapi_key" translatable="false">pref_swapi</string>
        <string name="pref_swapi_people">People</string>
        <string name="pref_swapi_people_value" translatable="false">people</string>
        <string name="pref_swapi_planets">Planets</string>
        <string name="pref_swapi_planets_value" translatable="false">planets</string>
        <string name="pref_swapi_vehicles">Vehicles</string>
        <string name="pref_swapi_vehicles_value" translatable="false">vehicles</string>
        <string name="pref_swapi_default">@string/pref_swapi_planets</string>


        <string name="pref_search_key1">TempUser1</string>
        <string name="pref_search_title1">First Search Entry</string>
        <string name="pref_search_key2">TempUser2</string>
        <string name="pref_search_title2">TempTitle2</string>



        <!-- - - - - - - - - - - - - - - - -
             - Used for language preference -
             - - - - - - - - - - - - - - - - -->
        <string name="pref_language_key" translatable="false">pref_language</string>
        <string name="pref_language_title">Programming language</string>
        <string name="pref_language_any">Any language</string>
        <string name="pref_language_any_value" translatable="false"></string>
        <string name="pref_language_c">C</string>
        <string name="pref_language_c_value" translatable="false">c</string>
        <string name="pref_language_cpp">C++</string>
        <string name="pref_language_cpp_value" translatable="false">c++</string>
        <string name="pref_language_java">Java</string>
        <string name="pref_language_java_value" translatable="false">java</string>
        <string name="pref_language_javascript">JavaScript</string>
        <string name="pref_language_javascript_value" translatable="false">javascript</string>
        <string name="pref_language_python">Python</string>
        <string name="pref_language_python_value" translatable="false">python</string>
        <string name="pref_language_ruby">Ruby</string>
        <string name="pref_language_ruby_value" translatable="false">ruby</string>
        <string name="pref_language_swift">Swift</string>
        <string name="pref_language_swift_value" translatable="false">swift</string>
        <string name="pref_language_default">@string/pref_language_any_value</string>

        <!-- - - - - - - - - - - - - - - - -
             - Used for search-in preferences -
             - - - - - - - - - - - - - - - - -->
        <string name="pref_in_title">Search in</string>
        <string name="pref_in_name_key" translatable="false">pref_in_name</string>
        <string name="pref_in_name_title">Search in name</string>
        <string name="pref_in_description_key" translatable="false">pref_in_description</string>
        <string name="pref_in_description_title">Search in description</string>
        <string name="pref_in_readme_key" translatable="false">pref_in_readme</string>
        <string name="pref_in_readme_title">Search in README</string>

        <!-- - - - - - - - - - - - - - - - -
             - Used for user preference -
             - - - - - - - - - - - - - - - - -->
        <string name="pref_user_key" translatable="false">pref_user</string>
        <string name="pref_user_title">Search Value 1</string>


        <string name="pref_swapi_search_key1" translatable="false">pref_swapi_1</string>
        <string name="pref_swapi_search_title1">Please Enter Your Search</string>

        <string name="pref_swapi_search_key2" translatable="false">pref_swapi_2</string>
        <string name="pref_swapi_search_title2">Please Enter Your Search</string>
</resources>
