<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <ListPreference
        android:key="@string/pref_swapi_key"
        android:title="@string/pref_swapi_title"
        android:dialogTitle="@string/pref_swapi_title"
        app:summary="%s"
        android:entries="@array/pref_swapi_entries"
        android:entryValues="@array/pref_swapi_value"
        android:defaultValue="@string/pref_swapi_default"
        />

    <EditTextPreference
        android:key="@string/pref_swapi_search_key1"
        android:title="@string/pref_swapi_search_title1"
        android:dialogTitle="@string/pref_swapi_search_title1" />

    <EditTextPreference
        android:key="@string/pref_swapi_search_key2"
        android:title="@string/pref_swapi_search_title2"
        android:dialogTitle="@string/pref_swapi_search_title2" />


</PreferenceScreen>